Fix dark mode on webcircle css

--- a/static/css/webcircle.css
+++ b/static/css/webcircle.css
@@ -18,7 +18,7 @@ a {
 
 @media (prefers-color-scheme: dark) {
     a {
-        color: #aaa;
+        color: #fff;
     }
 }
 
